fixed page subHead alignemnt

--- a/main.css
+++ b/main.css
@@ -271,6 +271,10 @@ p{
   text-align: left;
 }
 
+.subHead {
+    text-align: center;
+}
+
 .tell-me-more-button {
   transition: 0.25s;
   padding: 10px 20px;
